28.0.7
------
[pegasus] Disable SymlinkAwareZooKeeperTest temporarily

(RB=1889124)
Add configuration to disable generating deprecated protocol version 1.0.0 request builders.

28.0.6
------
(RB=1887898)
Remove accept header for individual mux requests

(RB=1864201)
Support for data template schema field string literals in PDL

28.0.5
------
(RB=1883213)
Update SchemaToPdlEncoder interface

28.0.4
------
(RB=1885898)
Add the HeaderBasedCodecProvider interface back

(RB=1870820)
Reference symbol table provider and handler implementation to enable symmetric protocol for exchanging symbol tables between rest.li services

(RB=1878020)
Fix NPE in URIElementParser and add more undecodable tests to TestURIElementParser

(RB=1868606)
defined SchemaAnnotationHandler interface for custom users to implement

28.0.3
------
(RB=1877796)
Clean generated dirs in Pegasus sub-projects without the Pegasus plugin

(RB=1874215)
Fix incorrect PDL encoding for bytes default values

28.0.2
------
(RB=1876286)
Expose some methods for use in pemberly-api

28.0.1
------
(RB=1869428)
Remove RestResponse.NO_RESPONSE.

28.0.0
-------
(RB=1855849)
Wire up symbol table providers on client and server. This will enable us to inject a runtime symbol table lookup system via container Add tool to generate symbol tables at runtime

27.7.18
-------
(RB=1754676)
Introduce RequestFinalizer API and server-side RequestFinalizerTransportDispatcher.

(RB=1808820)
Add ClientRequestFinalizerFilter to finalize requests on the client-side.

27.7.17
-------
(RB=1866668)
Remove dependency on protobuf artifact, to avoid runtime errors with dependencies of pegasus that may depend on other protobuf versions. Instead extract relevant parts of protobuf code into a separate li-protobuf module.

(RB=1852698)
Support configurable encoding styles for PDL

27.7.16
-------
(RB=1411984)
Make Pegasus Java 8 and Java 11 compatible

27.7.15
-------
(RB=1853192)